# graphics_programming_hw1

./: .gitignore  CMakeLists.txt
include/: Animator.h  Camera.h  Common.h  Model.h  Program.h  Scene.h  Shader.h  Texture.h
include/GLM/detail/: type_quat.inl
include/GLM/ext/: matrix_transform.hpp
shader/: fragment.glsl  material.fs.glsl  material.vs.glsl  texture.fs.glsl  texture.vs.glsl  vertex.glsl
src/: main.cpp
